# APK_Analyzer

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.workbuddy/memory/: 2026-07-03.md  MEMORY.md
plugin-sdk/: Cargo.toml
plugin-sdk/src/: abi.rs  host.rs  lib.rs
plugins/permission-cross-check/: Cargo.toml  manifest.json
plugins/permission-cross-check/src/: lib.rs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/analyzers/: ai_summary.rs  certificate.rs  components.rs  dex.rs  manifest.rs  mod.rs  native_libs.rs  overview.rs  permissions.rs  resources.rs  security.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/export/: mod.rs
src-tauri/src/models/: ai_summary.rs  analysis.rs  certificate.rs  components.rs  dex.rs  manifest.rs  mod.rs  native_libs.rs  overview.rs  permissions.rs  resources.rs  security.rs
src-tauri/src/parser/: apk.rs  axml.rs  dex.rs  mod.rs  resources.rs  signing.rs
src-tauri/src/plugin/: abi.rs  host.rs  manager.rs  manifest.rs  mod.rs
src-tauri/src/utils/: apk_utils.rs  mod.rs  permission_db.rs  recent_files.rs  tech_detector.rs
src/pages/: AISummaryPage.tsx  CertificatePage.tsx  ComponentsPage.tsx  DexPage.tsx  HomePage.tsx  ManifestPage.tsx  NativeLibsPage.tsx  OverviewPage.tsx  PermissionsPage.tsx  PluginsPage.tsx  ResourcesPage.tsx  SecurityPage.tsx
src/stores/: useStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: format.ts  pluginIcons.ts
(+10 files in other folders)
