[package]
name = "apk-analyzer"
version = "1.0.0"
description = "AI-Powered APK Analyzer"
authors = ["Casper"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "apk_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
x509-parser = "0.16"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
rayon = "1"
log = "0.4"
env_logger = "0.11"
flate2 = "1"
byteorder = "1"
once_cell = "1"
chrono = "0.4"
regex = "1"
libloading = "0.8"
dirs = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
