[package]
name = "perm-xcheck-plugin"
version = "0.1.0"
edition = "2021"
description = "Sample APK Analyzer plugin: Permission Cross-Check"
license = "MIT"

[lib]
name = "perm_xcheck_plugin"
crate-type = ["cdylib"]

[dependencies]
apk-analyzer-plugin-sdk = { path = "../../plugin-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
